# Parking-lot

./: .gitignore  README.md  README.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/db/: __init__.py  models.py  session.py
backend/decision/: __init__.py  allowlist.py  engine.py  handler.py
backend/detection/: detector.py
backend/fusion/: __init__.py  models.py  pipeline.py  tracker.py  voter.py
backend/ingestion/: __init__.py  camera.py  motion.py  orchestrator.py
backend/recognition/: ocr.py  postprocess.py
backend/utils/: csv_logger.py  logging.py  visualization.py
docs/: architecture.md  next.md
js/truck-dashboard/: package-lock.json  package.json
legacy/my_model (4)/: paddle_detect.py  yolo_detect.py
m_model/my_model (4)/: paddle_detect.py  test_ocr.py  truck_logistics.csv  yolo_detect.py
scripts/: annotate.py  run_live.py  run_pipeline.py  test_detect.py
src/parking_lot/: cli.py  config.py  gui.py
tests/: conftest.py  test_allowlist.py  test_api.py  test_camera.py  test_config.py  test_csv_logger.py  test_db_init.py  test_db_models.py  test_db_session.py  test_decision_e2e.py  test_decision_engine.py  test_decision_handler.py  test_decision_init.py  test_detection.py  test_events.py  test_fusion_e2e.py  test_fusion_init.py  test_fusion_models.py  test_fusion_pipeline.py  test_fusion_tracker.py  test_fusion_voter.py  test_grid.py  test_logger.py  test_motion.py  test_ocr_preprocess.py  test_orchestrator.py  test_postprocess.py  test_preprocessing.py  test_state.py  test_validation.py
truck/truck_model/: truck_logistics.csv  yolo_detect.py
yolo/my_model/: .gitignore  authorized.txt  parking_log.csv  yolo_detect.py
(+34 files in other folders)
