[project]
name = "parking-lot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.37",
    "structlog>=25.5.0",
    "ultralytics>=8.4.19",
    "uvicorn>=0.41.0",
]
